CUI-1266 Fixed inadvertent scrollbars and z-index issues for SelectList.

--- a/components/contrib/selectlist/styles/selectlist.less
+++ b/components/contrib/selectlist/styles/selectlist.less
@@ -8,19 +8,16 @@
 @selectlist-group-text-color: rgb(75, 75, 75);
 
 .selectlist {
-    // because mobile safari (iOS) has positioning issues
-    // we position it relative and remove the height
-    visibility: hidden;
-    position: relative;
-    float: left;
-    margin: -100% 0 0 0;
+    display: none;
+    position: absolute;
+    left: 0;
+    right: 0;
 
     &.visible {
-        visibility: visible;
+        display: block;
     }
 
     .box-sizing(border-box);
-    width: 100%;
     z-index: 1000; // just make it higher so it is above others
 
     background-color: @selectlist-box-background-color;
